testsuite/poke.pkl/scons-diag-1.pk
/* { dg-do compile } */

type Foo = struct { int i; long j; };

var a = Foo { i = 10, jurl = 20 };  /* { dg-error "" } */
